vlib/v/checker/tests/any_int_float_ban_err.vv
type Foo = any_int | any_float
type Fo2 = any_int

struct Int {
    i any_int
    f any_float
}

fn foo(i any_int) any_int {
    return i
}

fn foo2() any_int {
    return 1
} 
